# cellcounter

./: CLAUDE.md  README.md  conda_env.yaml  example_get_contiguous_size.py  index.html  objects.inv  plan.md  prompts.md  pyproject.toml  sitemap.xml
.claude/: CLAUDE.md
cellcounter/: __init__.py  constants.py
cellcounter/funcs/: arr_io_funcs.py  batch_combine_funcs.py  cpu_cellc_funcs.py  elastix_funcs.py  gpu_cellc_funcs.py  map_funcs.py  mask_funcs.py  reg_funcs.py  tiff2zarr_funcs.py  viewer_funcs.py  visual_check_funcs_dask.py  visual_check_funcs_tiff.py
cellcounter/gui/: gui_funcs.py  main.py  page1_init.py  page2_update.py  page3_import.py  page5_view.py  page6_combine.py
cellcounter/pipeline/: pipeline.py  visual_check.py
cellcounter/scripts/: init.py
cellcounter/templates/: run_pipeline.py  view_img.py
cellcounter/utils/: config_params_model.py  dask_utils.py  logging_utils.py  misc_utils.py  proj_org_utils.py
docs/: mkdocs.yml
docs/docs/: index.md
docs/docs/examples/: single_pipeline.md
docs/docs/explanation/: architecture.md  cell-detection.md
docs/docs/how-to/: batch.md  configuration.md  visual-check.md
docs/docs/reference/: abstract-pipeline.md  config.md  config_params_model.md  pipeline.md  pipeline_funcs.md  proj_fp_model.md  viewer_funcs.md  visual-check.md
docs/docs/tutorials/: installation.md  quickstart.md
docs/internal/: log_improvements.md  log_improvements_2.md
docs/site/: 404.html  index.html  objects.inv  sitemap.xml
docs/site/examples/: batch_pipeline.html  single_pipeline.html
docs/site/explanation/: architecture.html  cell-detection.html
docs/site/how-to/: batch.html  configuration.html  visual-check.html
docs/site/installation/: running.html  uninstalling.html
docs/site/reference/: abstract-pipeline.html  config.html  config_params_model.html  pipeline.html  pipeline_funcs.html  viewer_funcs.html  visual-check.html
docs/site/search/: search_index.js  search_index.json
docs/site/tutorials/: installation.html  quickstart.html  tutorial.html
explanation/: architecture.html  cell-detection.html
how-to/: batch.html  configuration.html  visual-check.html
installation/: installing.html  updating.html
reference/: abstract-pipeline.html  config.html  pipeline.html  visual-check.html
search/: search_index.js  search_index.json
src/cellcounter/: __init__.py  constants.py
src/cellcounter/constants/: __init__.py  annotations.py  atlas_options.py  cells.py  config.py  coords.py  masks.py  paths.py  processing.py
src/cellcounter/funcs/: __init__.py  arr_io_funcs.py  batch_combine_funcs.py  cpu_cellc_funcs.py  elastix_funcs.py  gpu_cellc_funcs.py  io_funcs.py  map_funcs.py  mask_funcs.py  reg_funcs.py  tuning_evaluation_funcs.py  viewer_funcs.py  visual_check_funcs_dask.py  visual_check_funcs_tiff.py
src/cellcounter/gui/: gui_funcs.py  main.py  page1_init.py  page2_update.py  page3_import.py  page4_pipeline.py  page5_view.py  page6_combine.py
src/cellcounter/models/: __init__.py  fp_models.py  proj_config.py
src/cellcounter/models/fp_models/: __init__.py  abstract_fp.py  proj_fp.py  proj_tuning_fp.py  ref_fp.py
src/cellcounter/models/proj_config/: __init__.py  cell_counting_config.py  cluster_config.py  dims_config.py  reference_config.py  registration_config.py  visual_check_config.py
src/cellcounter/pipeline/: __init__.py  abstract_pipeline.py  pipeline.py  visual_check.py
src/cellcounter/scripts/: __init__.py  init.py  make_project.py  project_gui.py
src/cellcounter/templates/: default_config.yaml  run_pipeline.py  view_img.py
src/cellcounter/templates/__marimo__/session/: run_pipeline.py.json  view_img.py.json
src/cellcounter/utils/: __init__.py  config_params_model.py  dask_utils.py  diagnostics_utils.py  io_utils.py  logger.py  logger_utils.py  logging_utils.py  misc_utils.py  proj_org_utils.py  template_utils.py  union_find.py  viewer.py
src/cellcounter/viewer/: __init__.py
tutorials/: installation.html  pipeline.html  quickstart.html
