[project]
name = "cellcounter"
version = "0.1.0"
description = "cFos cell counting and region mapping for whole brain microscopy"
authors = [{ name = "BowenLab" }]
requires-python = ">=3.12,<3.13"
readme = "README.md"
license = "GPL-3.0-or-later"
dependencies = [
    "dask[complete]>=2024.11.2",
    "ipykernel>=6.29.5",
    "jinja2>=3.1.6",
    "napari[all]>=0.6.1",
    "natsort>=8.4.0",
    "nibabel>=5.3.2",
    "numpy>=2.2.6",
    "pandas>=2.3.0",
    "pydantic>=2.11.7",
    "scikit-image>=0.25.2",
    "seaborn>=0.13.2",
    "streamlit>=1.46.1",
    "tifffile>=2025.6.11",
    "zarr>=3.0.8",
]

[project.optional-dependencies]
gpu = ["dask-cuda>=24.12.0,<25", "cupy-cuda12x>=13.4.1"]
elastix = ["simpleitk-simpleelastix>=2.4.0.dev53,<3"]

[project.urls]
Homepage = "https://tlee08.github.io/cellcounter"
Repository = "https://github.com/tlee08/cellcounter"
Documentation = "https://tlee08.github.io/cellcounter"

[project.scripts]
cellcounter_init = "cellcounter.scripts.init:main"
cellcounter_project_gui = "cellcounter.scripts.project_gui:run_script"
cellcounter_make_project = "cellcounter.scripts.make_project:main"

[dependency-groups]
dev = [
    "mkdocs-material>=9.6.14",
    "mkdocstrings-python>=1.16.12",
    "pymdown-extensions>=10.16",
    "pytest>=8.4.1",
    "ruff>=0.12.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120

[tool.ruff.format]
docstring-code-format = true
