[project]
name = "cellcounter"
version = "0.1.0"
description = "cFos cell counting and region mapping for whole brain microscopy"
authors = [{ name = "BowenLab" }]
requires-python = ">=3.12,<3.13"
readme = "README.md"
license = "GPL-3.0-or-later"
dependencies = [
    "dask[complete]>=2026.1.1",
    "ipykernel>=7.2.0",
    "jinja2>=3.1.6",
    "napari[all]>=0.6.5",
    "natsort>=8.4.0",
    "nibabel>=5.4.2",
    "numpy>=2.4.3",
    "pandas>=2.3.3",
    "pydantic>=2.12.5",
    "scikit-image>=0.26.0",
    "seaborn>=0.13.2",
    "streamlit>=1.55.0",
    "tifffile>=2026.3.3",
    "zarr>=3.1.5",
]

[project.urls]
Homepage = "https://tlee08.github.io/cellcounter"
Repository = "https://github.com/tlee08/cellcounter"
Documentation = "https://tlee08.github.io/cellcounter"

[project.optional-dependencies]
elastix = ["simpleitk-simpleelastix>=3.0.0a1.post183"]
gpu = ["cupy-cuda13x>=14.0.1", "dask-cuda>=26.2.0"]

[dependency-groups]
dev = [
    "mkdocs-material>=9.7.5",
    "mkdocstrings-python>=2.0.3",
    "pymdown-extensions>=10.21",
    "pytest>=9.0.2",
    "ruff>=0.15.6",
]

[tool.uv]
exclude-dependencies = ["pynvml"]

[project.scripts]
cellcounter-init = "cellcounter.scripts.init:main"
cellcounter-project-gui = "cellcounter.scripts.project_gui:run_script"
cellcounter-make-project = "cellcounter.scripts.make_project:main"

[build-system]
requires = ["uv_build>=0.10.11,<0.11.0"]
build-backend = "uv_build"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "T201",
    "BLE001",
    "RET504",
    "TRY300",
    "TC003",
    "TC001",
    "TC002",
    "COM812",
    "ARG003",
    "D100",
    "PLR0913",
    "ARG002",
]
fixable = ["ALL"]
unfixable = []


[tool.ruff.lint.pydocstyle]
convention = "google"
